examples/error-codes/undefined/UB-STDARG1-bad.output
Error: UB-STDARG1
Description: 'va_start' used in a function with fixed args.
Type: Undefined behavior.
See also: C11 sec. 6.9.1:8, J.2:1 item 87
  at __va_start(UB-STDARG1-bad.c:6)
  at f(UB-STDARG1-bad.c:6)
  at main(UB-STDARG1-bad.c:10)
  at <file-scope>(<unknown>)
